# ins-dashboard-gtk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/app/: App.cpp  App.h  AppState.h
src/input/: InputReader.cpp  InputReader.h  SourceConfig.h  SourceUri.cpp  SourceUri.h
src/model/: InsData.h  SharedModel.h
src/nmea/: NmeaParser.cpp  NmeaParser.h
src/render/: DrawUtil.cpp  DrawUtil.h  Icons.cpp  Icons.h  Screens.cpp  Screens.h  Theme.h
src/sim/: DemoData.cpp  DemoData.h
src/util/: MathUtil.h  StringUtil.cpp  StringUtil.h
